new proj/src/objects/GE_PW_Site__c.object
<CustomObject>
    <fields>
        <fullName>GE_PW_No_Wind_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Wind Site required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_Site_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Site</label>
    <nameField>
        <displayFormat>S{00000}</displayFormat>
        <label>Site Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <recordTypes>
        <fullName>GE_PW_Wind_Services_Sites</fullName>
        <active>true</active>
        <label>GE PW Wind Services Sites</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>